<resources>
    <string name="app_name">Recipe</string>
    <string name="RecipePicture_Desc">Recipe picture</string>
    <string name="Recipe_Name">Recipe Name</string>
    <string name="rectangle_box">rectangle box</string>
    <string name="hello">Hello</string>
    <string name="ingredient">Ingredient</string>
    <string name="quantity">Quantity:</string>
    <string name="measure">Measure:</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="stepNum">Step: %d</string>
    <string name="appwidget_text">RecipeS</string>
    <string name="add_widget">Add widget</string>
</resources>
